<resources>
    <string name="app_name">IntentTest</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_intent_exerc1_launcher">IntentExercice</string>
    <string name="test_activity_invoker_button_label">Invoke test Activity</string>
    <string name="sum_activity_invoker_button_label_no_data">Invoke sum Activity (no data)</string>
    <string name="sum_activity_invoker_button_label_with_data">Invoke sum Activity (with data)</string>
    <string name="main_activity_invoker_button_label">Return to main Activity</string>
    <string name="tabbed_activity_invoker_button_label">Invoked Tabbed Activity</string>
    <string name="test_activity_heading">This is the test activity</string>
    <string name="main_activity_heading">This is the main activity</string>
    <string name="sum_activity_heading">This is the sum activity</string>
</resources>
